# clogger

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md
cmake/: AddLibraryTarget.cmake  CMakeLists.txt  clogger_macro_defs_public.h.in  clogger_namespace_close_public.h.in  clogger_namespace_open_public.h.in  clogger_sleep_public.h.in  graylog_handler_public.h.in
src/: clogger.h  clogger.h.in  disk_util.c  disk_util.h  logger.c  logger.h  logger_atomic.h  logger_buffer.c  logger_buffer.h  logger_defines.c  logger_defines.h  logger_formatter.c  logger_formatter.h  logger_handler.c  logger_handler.h  logger_id.c  logger_id.h  logger_levels.c  logger_levels.h  logger_msg.c  logger_msg.h  logger_test.c  logger_util.c  logger_util.h
src/cc/: CMakeLists.txt  Clogger.cc  Clogger.hpp
src/cc/test/: CMakeLists.txt  CloggerSuite.cc
src/examples/: CMakeLists.txt  README.md  cc_test.cc  feature_test.c  simple_test.c  stress_test.c
src/handlers/: console_handler.c  console_handler.h  file_handler.c  file_handler.h  graylog_handler.c  graylog_handler.h
src/test/: CMakeLists.txt  buffer_suite.c  clogger_test.h  common_util.c  common_util.h  format_suite.c  handler_suite.c  id_suite.c  level_suite.c  logger_suite.c  msg_suite.c  test.c
